# datavzrd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  data.xlsx  index.html
.examples/: embed.js  example-config.yaml  test.csv
.examples/data/: movies.csv  oscars.csv
.examples/example-report/movies/: index_1.html  index_2.html  table.js
.examples/example-report/movies-plot/: index_1.html
.examples/example-report/movies/plots/: plot_0.js  plot_1.js  plot_2.js  plot_3.js  plot_4.js  plot_6.js  plot_7.js  plot_8.js
.examples/example-report/movies/search/: column_1.html  column_3.html  column_5.html  column_6.html  column_8.html
.examples/example-report/oscar-plot/: index_1.html
.examples/example-report/oscars/: index_1.html  index_2.html  index_3.html  index_4.html  index_5.html  index_6.html  index_7.html  index_8.html
.examples/example-report/oscars/plots/: plot_0.js  plot_1.js  plot_10.js  plot_2.js  plot_3.js  plot_4.js  plot_5.js  plot_6.js  plot_7.js  plot_8.js  plot_9.js
.examples/example-report/oscars/search/: column_1.html  column_10.html  column_2.html  column_3.html  column_4.html  column_8.html
.examples/example-report/static/: datavzrd.css
.examples/specs/: movies.vl.json  oscars.vl.json  overall-wins-and-overall-nominations.vl.json
.github/workflows/: apply-clippy-lints.yaml  code-duplication.yml  example-report-on-pr.yml  example-report.yml  release-please.yml  rust.yml  webview-update.yml
movies/: config.js  functions.js  heatmap.js  index_1.html  index_2.html  table.js
movies-plot/: index_1.html
movies/data/: data_1.js
movies/plots/: plot_0.js  plot_1.js  plot_2.js  plot_3.js  plot_4.js  plot_5.js  plot_6.js  plot_7.js  plot_8.js  plots.js
movies/search/: column_0.html  column_1.html  column_2.html  column_3.html  column_4.html  column_5.html  column_6.html  column_7.html  column_8.html
oscar-plot/: index_1.html
oscars/: config.js  functions.js  heatmap.js  index_1.html  index_2.html  index_3.html  index_4.html  index_5.html  index_6.html  index_7.html  index_8.html  table.js
oscars/data/: data_1.js
oscars/plots/: plot_0.js  plot_1.js  plot_10.js  plot_11.js  plot_2.js  plot_3.js  plot_4.js  plot_5.js  plot_6.js  plot_7.js  plot_8.js  plot_9.js  plots.js
oscars/search/: column_0.html  column_1.html  column_10.html  column_2.html  column_3.html  column_4.html  column_5.html  column_6.html  column_7.html  column_8.html  column_9.html
src/: cli.rs  lib.rs  main.rs  publish.rs  spec.rs  spells.rs  suggest.rs
src/render/: mod.rs  portable.rs
src/render/portable/: mod.rs  plot.rs  utils.rs
src/utils/: column_index.rs  column_type.rs  compress.rs  mod.rs  row_address.rs
static/: bootstrap-table-filter-control.min.js  bootstrap-table.min.js  bundle.js  datavzrd.css  datavzrd.js  lib-voyager.min.js  showdown-katex.min.js
templates/: bar_plot.vl.tera  bubble_plot.vl.tera  config.js.tera  data.js.tera  empty.html.tera  functions.js.tera  html.html.tera  img.html.tera  index.html.tera  linkout_button.html.tera  nominal_plot.js.tera  numeric_plot.js.tera  pages.yaml  plot.html.tera  search_dialog.html.tera  table.html.tera  table.js.tera  table_heatmap.js.tera  table_heatmap.vl.tera  tick_plot.vl.tera  voyager.html.tera
tests/: test1.yaml  test2.yaml
tests/data/: additional_header_rows.csv  data1.tsv  data2.tsv  empty_table.csv  non_uniform_datatypes.csv  uniform_datatypes.csv  uniform_datatypes.json
tests/expected/: index.html
tests/spells/: meta.yaml  p-value.spell.yaml  spell.yaml
web/: package.json  rspack.config.js  rspack.config.ts  tsconfig.json  turbo.config.js  webpack.config.js
web/src/: App.tsx  datavzrd.js  datavzrd.tsx  description.js  modals.js  page.js  utils.js
web/src/components/DescriptionBox/: DescriptionBox.css  DescriptionBox.tsx
web/src/components/HistogramPlot/: HistogramPlot.css  HistogramPlot.tsx
web/src/components/Menu/: Menu.css  Menu.tsx
web/src/components/QRCodeModal/: QRCode.tsx  QRCodeModal.css  QRCodeModal.tsx
web/src/components/Table/: Table.css  (+2 more)
web/src/plot/: custom-plot.js  ellipsis.js  heatmap.js  link-to-url.js  pills.js  plot.js
web/src/styles/: App.css  index.css
web/style/: datavzrd.css
(+5 files in other folders)
