[package]
name = "datavzrd"
description = "A tool to create visual HTML reports from collections of CSV/TSV tables"
license = "MIT"
version = "2.49.0"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>", "Felix Wiegand <felix.wiegand@tu-dortmund.de>"]
edition = "2021"

[dependencies]
fs_extra = "1.3.0"
derefable = "0.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.27", features = ["color", "suggestions", "derive", "env"] }
anyhow = "1"
thiserror = "2"
readervzrd = "0.1.1"
typed-builder = "0.20"
serde_yaml = "0.8" # https://github.com/AlexanderThaller/format_serde_error/pull/23
serde_with = { version = "3.12.0", features = ["macros"] }
derive-new = "0.7"
itertools = "0.14.0"
tera = "1.20.0"
serde_json = "1.0.137"
lz-str = "0.2.1"
chrono = "0.4"
ndhistogram = "0.10.0"
lazy_static = "1.5.0"
fancy-regex = "0.14.0"
log = "0.4.25"
simplelog = "0.12.2"
minify-js = "=0.6.0" # newer versions generate display issues (see PR #375)
minify-html = "0.15.0"
simple_excel_writer = "0.2"
slug = "0.1.6"
md5 = "0.7.0"
jsonm = "0.2.0"
format_serde_error = "0.3.0"
reqwest = { version="0.12.12", features = ["blocking"] }
pyo3 = { version = "0.23.4", features = ["auto-initialize", "abi3-py310"] }
tempfile = "3.15.0"

[build-dependencies]
fs_extra = "1.3"

[profile.release]
codegen-units = 1
lto = "fat"
