[package]
name = "datavzrd"
description = "A tool to create visual HTML reports from collections of CSV/TSV tables"
license = "MIT"
version = "2.70.1"
authors = [
    "Johannes Köster <johannes.koester@tu-dortmund.de>",
    "Felix Wiegand <felix.wiegand@tu-dortmund.de>",
]
edition = "2021"

[dependencies]
fs_extra = "1.3.0"
derefable = "0.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.6.1", features = [
    "color",
    "suggestions",
    "derive",
    "env",
] }
anyhow = "1"
thiserror = "2"
readervzrd = "0.4.0"
typed-builder = "0.23"
serde_yaml = "0.8" # https://github.com/AlexanderThaller/format_serde_error/pull/23
serde_with = { version = "3.20.0", features = ["macros"] }
derive-new = "0.7"
itertools = "0.15.0"
tera = "2.0.0"
tera-contrib = { version = "0.2.0", features = ["json"] }
serde_json = "1.0.150"
lz-str = "0.2.1"
chrono = "0.4"
fancy-regex = "0.18.0"
log = "0.4.30"
simplelog = "0.12.2"
minify-js = "=0.6.0" # newer versions generate display issues (see PR #375)
minify-html = "0.18.1"
simple_excel_writer = "0.2"
slug = "0.1.6"
md5 = "0.8.0"
jsonm = "0.2.1"
format_serde_error = "0.3.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
pyo3 = { version = "0.29.0", features = ["auto-initialize", "abi3-py310"] }
tempfile = "3.27.0"

[build-dependencies]
fs_extra = "1.3"

[profile.release]
codegen-units = 1
lto = "fat"

[lib]
path = "src/lib.rs"

[[bin]]
name = "datavzrd"
path = "src/main.rs"
